--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title></title>
+    <title>Contact details list for all Members of the European Parliament (MEPs)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -186,6 +186,10 @@
             <div class=""><span class="contact-icon"></span>&nbsp;<span class="contact-detail"></span></div>
         </li>
     </template>
+
+    <div class="container mt-5 mb-5">
+        Member list generated from <a href="https://github.com/zeyus/contact-mep-representative">contact-mep-representative</a> by <a href="https://github.com/zeyus/">zeyus</a>. Member contact collation and presentation tool licenced under the <a href="https://github.com/zeyus/contact-mep-representative/blob/master/LICENSE">MIT License</a>.
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
