--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Contact details list for all Members of the European Parliament (MEPs)</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="assets/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="flag-icons.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
@@ -210,6 +209,10 @@
             <div class=""><span class="contact-icon"></span>&nbsp;<span class="contact-detail"></span></div>
         </li>
     </template>
+    <template id="contact-template-noli">
+        <div class="member-contact mt-3"><span class="contact-icon"></span>&nbsp;<span class="contact-detail"></span>
+        </div>
+    </template>
     <template id="office-contacts-template">
         <ul class="member-office-contacts list-unstyled d-flex flex-row gap-3">
 
@@ -218,11 +221,11 @@
     <template id="office-contact-template">
         <li class="member-contact mt-3 d-flex flex-column gap-1">
             <!-- type is Brussels or Strasbourg -->
-            <div><span class="contact-type fw-bold"></span></div>
+            <div class="d-flex"><span class="contact-type fw-bold"></span></div>
             <!-- next is address -->
-            <div class="contact-address"></div>
+            <div class="d-flex contact-address"></div>
             <!-- then phone number -->
-            <div class="contact-phone"></div>
+            <div class="d-flex contact-phone"></div>
         </li>
     </template>
 
@@ -235,9 +238,7 @@
     </footer>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="assets/bootstrap.bundle.min.js"></script>
 
     <!-- Content script (load JSON, populate member info) -->
     <script lang="javascript">
@@ -677,7 +678,7 @@
                                 const officeContactsTemplate = document.getElementById('office-contacts-template').content.cloneNode(true);
                                 contactItem.forEach(item => {
                                     const officeContactTemplate = document.getElementById('office-contact-template').content.cloneNode(true);
-                                    const phoneTemplate = document.getElementById('contact-template').content.cloneNode(true);
+                                    const phoneTemplate = document.getElementById('contact-template-noli').content.cloneNode(true);
                                     officeContactTemplate.querySelector('.contact-type').innerText = item.type;
                                     officeContactTemplate.querySelector('.contact-address').innerText = item.address;
 
