added keep android open banner

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
 <body>
     <!-- Header section -->
+    <script src="https://keepandroidopen.org/banner.js"></script>
     <header class="container my-4">
         <div class="row align-items-center">
             <div class="col-8">
