--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <svg class="bi my-1 theme-icon-active">
                             <use href="bootstrap-icons.svg#sun-fill"></use>
                         </svg>
-                        <span class="ms-2" id="bd-theme-text">Toggle theme</span>
+                        <span class="ms-2" id="bd-theme-text">Theme</span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme-text" data-bs-popper="static">
                         <li>
@@ -154,10 +154,8 @@
     </header>
 
     <!-- Metadata update alert -->
-    <div class="container my-4">
-        <div class="row">
-            <div class="alert alert-secondary" id="update-metadata" role="alert"></div>
-        </div>
+    <div class="container">
+        <div class="alert alert-info" id="update-metadata" role="alert"></div>
     </div>
 
     <!-- Country List Accordion -->
