--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Contact details list for all Members of the European Parliament (MEPs)" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="manifest" href="site.webmanifest" />
 
     <title>Contact details list for all Members of the European Parliament (MEPs)</title>
     <link href="assets/bootstrap.min.css" rel="stylesheet">
